upload meta form for land, transport, tourism and water

--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -1,190 +1,115 @@
 <nav class="navbar bg-body-tertiary sticky-top bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'display_trade_table' %}">DataBank</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="offcanvas"
-      data-bs-target="#offcanvasNavbar"
-      aria-controls="offcanvasNavbar"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+      aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div
-      class="offcanvas offcanvas-end"
-      tabindex="-1"
-      id="offcanvasNavbar"
-      aria-labelledby="offcanvasNavbarLabel"
-    >
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
       <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="offcanvas"
-          aria-label="Close"
-        ></button>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{% url 'display_trade_table' %}"
-              >Home</a
-            >
+            <a class="nav-link active" aria-current="page" href="{% url 'display_trade_table' %}">Home</a>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{% url 'time_series_analysis' %}"
-              >Time Series Analysis</a
-            >
+            <a class="nav-link active" aria-current="page" href="{% url 'time_series_analysis' %}">Time Series
+              Analysis</a>
           </li>
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Upload Excel File
             </a>
             <ul class="dropdown-menu">
               <li>
-                <a
-                  class="dropdown-item"
-                  href="{% url 'upload_country_meta_excel' %}"
-                  >Upload Country Meta File</a
-                >
+                <a class="dropdown-item" href="{% url 'upload_country_meta_excel' %}">Upload Country Meta File</a>
               </li>
               <li>
-                <a
-                  class="dropdown-item"
-                  href="{% url 'upload_unit_meta_excel' %}"
-                  >Upload Unit Meta File</a
-                >
+                <a class="dropdown-item" href="{% url 'upload_unit_meta_excel' %}">Upload Unit Meta File</a>
               </li>
               <li>
-                <a
-                  class="dropdown-item"
-                  href="{% url 'upload_hs_code_meta_excel' %}"
-                  >Upload HS Code Meta File</a
-                >
+                <a class="dropdown-item" href="{% url 'upload_hs_code_meta_excel' %}">Upload HS Code Meta File</a>
               </li>
               <li>
-                <a class="dropdown-item" href="{% url 'upload_trade_excel' %}"
-                  >Upload Trade Data File</a
-                >
+                <a class="dropdown-item" href="{% url 'upload_trade_excel' %}">Upload Trade Data File</a>
               </li>
               <li class="nav-item">
-                <a
-                  class="dropdown-item"
-                  href="{% url 'upload_forest_excel' %}"
-                  >Upload forest data file</a
-                >
+                <a class="dropdown-item" href="{% url 'upload_forest_excel' %}">Upload forest data file</a>
               </li>
               <li class="nav-item">
-                <a
-                  class="dropdown-item"
-                  href="{% url 'upload_population_excel' %}"
-                  >Upload populaton data file</a
-                >
+                <a class="dropdown-item" href="{% url 'upload_population_excel' %}">Upload populaton data file</a>
               </li>
               <li class="nav-item">
-                <a
-                  class="dropdown-item"
-                  href="{% url 'upload_land_excel' %}"
-                  >Upload land data file</a
-                >
+                <a class="dropdown-item" href="{% url 'upload_land_excel' %}">Upload land data file</a>
               </li>
               <li class="nav-item">
-                <a
-                  class="dropdown-item"
-                  href="{% url 'upload_transport_excel' %}"
-                  >Upload Transport data file</a
-                >
+                <a class="dropdown-item" href="{% url 'upload_transport_excel' %}">Upload Transport data file</a>
               </li>
               <li class="nav-item">
-                <a
-                  class="dropdown-item"
-                  href="{% url 'upload_hotel_excel' %}"
-                  >Upload Hotel data file</a
-                >
+                <a class="dropdown-item" href="{% url 'upload_hotel_excel' %}">Upload Hotel data file</a>
               </li>
 
               <li class="nav-item">
-                <a
-                  class="dropdown-item"
-                  href="{% url 'upload_water_excel' %}"
-                  >Upload Water data file</a
-                >
+                <a class="dropdown-item" href="{% url 'upload_water_excel' %}">Upload Water data file</a>
               </li>
 
               <li class="nav-item">
-                <a
-                  class="dropdown-item"
-                  href="{% url 'upload_tourism_excel' %}"
-                  >Upload Tourism data file</a
-                >
+                <a class="dropdown-item" href="{% url 'upload_tourism_excel' %}">Upload Tourism data file</a>
               </li>
 
             </ul>
           </li>
 
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Show Tables
             </a>
-            
+
             <ul class="dropdown-menu">
               {% for table in tables %}
               <li>
-                <a
-                  class="dropdown-item"
-                  href="{% url table.url %}"
-                  > {{table.name}} </a
-                >
+                <a class="dropdown-item" href="{% url table.url %}"> {{table.name}} </a>
               </li>
               {% endfor %}
-             
+
             </ul>
           </li>
 
 
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Show Meta Tables
             </a>
-            
+
             <ul class="dropdown-menu">
               {% for meta_table in meta_tables %}
               <li>
-                <a
-                  class="dropdown-item"
-                  href="{% url meta_table.url %}"
-                  > {{meta_table.name}} </a
-                >
+                <a class="dropdown-item" href="{% url meta_table.url %}"> {{meta_table.name}} </a>
               </li>
               {% endfor %}
-             
+
             </ul>
+
+
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Upload Meta Data
+            </a>
+
+            <ul class="dropdown-menu">
+              {% for meta_table in meta_tables %}
+              <li>
+                <a class="dropdown-item" href="{% url meta_table.upload_url %}"> {{meta_table.name}} </a>
+              </li>
+              {% endfor %}
+
+            </ul>
+
+
           </li>
 
           <!-- Upload single record -->
@@ -198,7 +123,7 @@
             >
           </li> -->
         </ul>
-       
+
       </div>
     </div>
   </div>
