--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -24,42 +24,11 @@
               Upload Excel File
             </a>
             <ul class="dropdown-menu">
+              {% for table in tables %}
               <li>
-                <a class="dropdown-item" href="{% url 'upload_country_meta_excel' %}">Upload Country Meta File</a>
+                <a class="dropdown-item" href="{% url table.upload_url %}">Upload {{table.name}} File</a>
               </li>
-              <li>
-                <a class="dropdown-item" href="{% url 'upload_unit_meta_excel' %}">Upload Unit Meta File</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="{% url 'upload_hs_code_meta_excel' %}">Upload HS Code Meta File</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="{% url 'upload_trade_excel' %}">Upload Trade Data File</a>
-              </li>
-              <li class="nav-item">
-                <a class="dropdown-item" href="{% url 'upload_forest_excel' %}">Upload forest data file</a>
-              </li>
-              <li class="nav-item">
-                <a class="dropdown-item" href="{% url 'upload_population_excel' %}">Upload populaton data file</a>
-              </li>
-              <li class="nav-item">
-                <a class="dropdown-item" href="{% url 'upload_land_excel' %}">Upload land data file</a>
-              </li>
-              <li class="nav-item">
-                <a class="dropdown-item" href="{% url 'upload_transport_excel' %}">Upload Transport data file</a>
-              </li>
-              <li class="nav-item">
-                <a class="dropdown-item" href="{% url 'upload_hotel_excel' %}">Upload Hotel data file</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="dropdown-item" href="{% url 'upload_water_excel' %}">Upload Water data file</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="dropdown-item" href="{% url 'upload_tourism_excel' %}">Upload Tourism data file</a>
-              </li>
-
+              {% endfor %}
             </ul>
           </li>
 
