--- a/databank/general_data/templates/general_data/services_templates/services_table.html
+++ b/databank/general_data/templates/general_data/services_templates/services_table.html
@@ -9,30 +9,30 @@
 <div class="bg-light mt-3">
     <div class="collapse shadow rounded-2 " id="collapseFilter">
         <div class="px-2 py-2">
-            <form class="row g-3" method="GET" action=".">
+            <form class="row g-3" method="GET" action="services_table">
                 <div class="col-md-3">
-                    <label for="date_minimum">Calender Date Minimum</label>
-                    <input type="date" class="form-control" id="date_minimum" name="date_min" />
+                    <label for="year_min">Calender Date Minimum</label>
+                    <input type="date" class="form-control" id="year_min" name="year_min" />
                 </div>
                 <div class="col-md-3">
-                    <label for="date_maximum">Calender Date Maximum</label>
-                    <input type="date" class="form-control" id="date_maximum" name="date_max" />
+                    <label for="year_max">Calender Date Maximum</label>
+                    <input type="date" class="form-control" id="year_max" name="year_max" />
                 </div>
 
                 <div class="col-md-3">
-                    <label for="viewCountMin">Minimum Quantity</label>
-                    <input type="number" min="0" class="form-control" id="viewCountMin" placeholder="0"
-                        name="quantity_min" />
+                    <label for="value_min">Minimum Quantity</label>
+                    <input type="number" min="0" class="form-control" id="value_min" placeholder="0"
+                        name="value_min" />
                 </div>
                 <div class="col-md-3">
-                    <label for="viewCountMax">Maximum Quantity</label>
-                    <input type="number" min="0" class="form-control" id="viewCountMax" placeholder="1000"
-                        name="quantity_max" />
+                    <label for="value_max">Maximum Quantity</label>
+                    <input type="number" min="0" class="form-control" id="value_max" placeholder="1000"
+                        name="value_max" />
                 </div>
 
                 <div class="form-group col-md-3">
-                    <label for="trade_type">Direction</label>
-                    <select id="trade_type" class="form-control" name="direction">
+                    <label for="direction">Direction</label>
+                    <select id="direction" class="form-control" name="direction">
                         <option selected>--</option>
                         {% for direction in direction_categories %}
                         <option value="{{direction}}">{{direction}}</option>
@@ -41,8 +41,8 @@
                 </div>
 
                 <div class="form-group col-md-3">
-                    <label for="country_category">Origin Destination</label>
-                    <select id="country_category" class="form-control" name="country_category">
+                    <label for="origin_destination">Origin Destination</label>
+                    <select id="origin_destination" class="form-control" name="origin_destination">
                         <option selected>--</option>
                         {% for country_category in country_categories %}
                         <option value="{{country_category.id}}">{{country_category}}</option>
@@ -51,11 +51,21 @@
                 </div>
 
                 <div class="form-group col-md-3">
-                    <label for="hs_code">Service Code</label>
-                    <select id="hs_code" class="form-control" name="hs_code">
+                    <label for="country">Country</label>
+                    <select id="country" class="form-control" name="country">
+                        <option selected>--</option>
+                        {% for country_category in country_categories %}
+                        <option value="{{country_category.id}}">{{country_category}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+
+                <div class="form-group col-md-3">
+                    <label for="code">Service Code</label>
+                    <select id="code" class="form-control" name="code">
                         <option selected>--</option>
                         {% for service in service_code %}
-                        <option value="{{hs_code.id }}">
+                        <option value="{{service}}">
                             {{service}} - {{service.Services_Type}}
                         </option>
                         {% endfor %}
@@ -80,7 +90,7 @@
 
 <!-- TODO: add id here -->
 
-<form action="" method="post" id="">
+<form action="" method="post" id="delete-form-services">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light p-3">
         <div class="d-flex align-items-center justify-content-between px-2">
@@ -107,12 +117,17 @@
                             <input type="checkbox" name="" id="select-all" onclick="toggleSelectAll()" />
                         </th>
                         {% for column in column_names %}
-                        {% if column.name != 'id' and column.name != 'modified_date' and column.name != 'created_date'%}
-                        <th class="text-white fst-normal " scope="col"
+                        {% if column.name != 'id' and column.name != 'modified_date' and column.name != 'created_date' and column != 'Services_Type' %}
+                        <th class="text-white fst-normal " 
                             style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
                             {{column.verbose_name }} </th>
                         {% endif %}
                         {% endfor %}
+                        <th  class="text-white fst-normal " 
+                        style="font-size:14px; font-weight: 500; background: #12486B;" scope="col"> Services Type </th>
+                        <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
+                            Action
+                          </th>
                     </tr>
                 </thead>
                 <tbody class="table-hover">
@@ -128,13 +143,33 @@
                           </td>
 
                         {% for col in column_names %}
-                            {% if col.name != 'id' %}
+                            {% if col.name != 'id' and col != 'Services_Type' %}
                                 <td class="px-2">
                                     {{record|get_key:col.name}}
                                 </td>
+                                
                             {% endif %}
+                            
                         {% endfor %}
-
+                        <td class="px-2">
+                            {{record.Code.Services_Type}}
+                        </td>
+                        <td class="d-flex">
+                            <div class="btn">
+                              <a
+                                class=""
+                                id="delete_forest"
+                                onclick="confirmDelete('{{record.id}}')"
+                                ><i class="fa-regular fa-trash-can" style="color: #ff0000"></i></a>
+                                
+                            </div>
+                            <div class="btn ">
+                              <a
+                                class=""
+                                href="{% url 'update_services_record' record.id %}"
+                                ><i class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
+                            </div>
+                          </td> 
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -149,12 +184,28 @@
         >
           {% if page.has_previous %}
           <a
-            href=""
+            href="?page=1
+            {% if request.GET.country %}&country={{ request.GET.country }}{% endif %}
+            {% if request.GET.year_min %}&year_min={{ request.GET.year_min }}{% endif %}
+            {% if request.GET.year_max %}&year_max={{ request.GET.year_max }}{% endif %}
+            {% if request.GET.direction %}&direction={{ request.GET.direction }}{% endif %}
+            {% if request.GET.code %}&code={{ request.GET.code }}{% endif %}
+            {% if request.GET.value_min %}&value_min={{ request.GET.value_min }}{% endif %}
+            {% if request.GET.value_max %}&value_max={{ request.GET.value_max }}{% endif %}
+            {% if request.GET.origin_destination %}&origin_destination={{ request.GET.origin_destination }}{% endif %}"
           >
             &laquo; First
           </a>
           <a
-            href=""
+            href="?page={{page.previous_page_number}}
+            {% if request.GET.country %}&country={{ request.GET.country }}{% endif %}
+            {% if request.GET.year_min %}&year_min={{ request.GET.year_min }}{% endif %}
+            {% if request.GET.year_max %}&year_max={{ request.GET.year_max }}{% endif %}
+            {% if request.GET.direction %}&direction={{ request.GET.direction }}{% endif %}
+            {% if request.GET.code %}&code={{ request.GET.code }}{% endif %}
+            {% if request.GET.value_min %}&value_min={{ request.GET.value_min }}{% endif %}
+            {% if request.GET.value_max %}&value_max={{ request.GET.value_max }}{% endif %}
+            {% if request.GET.origin_destination %}&origin_destination={{ request.GET.origin_destination }}{% endif %}"
           >
             Previous
           </a>
@@ -166,12 +217,28 @@
   
           {% if page.has_next %}
           <a
-            href=""
+            href="?page={{page.next_page_number}}
+            {% if request.GET.country %}&country={{ request.GET.country }}{% endif %}
+            {% if request.GET.year_min %}&year_min={{ request.GET.year_min }}{% endif %}
+            {% if request.GET.year_max %}&year_max={{ request.GET.year_max }}{% endif %}
+            {% if request.GET.direction %}&direction={{ request.GET.direction }}{% endif %}
+            {% if request.GET.code %}&code={{ request.GET.code }}{% endif %}
+            {% if request.GET.value_min %}&value_min={{ request.GET.value_min }}{% endif %}
+            {% if request.GET.value_max %}&value_max={{ request.GET.value_max }}{% endif %}
+            {% if request.GET.origin_destination %}&origin_destination={{ request.GET.origin_destination }}{% endif %}"
           >
             Next
           </a>
           <a
-            href=""
+            href="?page={{ page.paginator.num_pages }}
+            {% if request.GET.country %}&country={{ request.GET.country }}{% endif %}
+            {% if request.GET.year_min %}&year_min={{ request.GET.year_min }}{% endif %}
+            {% if request.GET.year_max %}&year_max={{ request.GET.year_max }}{% endif %}
+            {% if request.GET.direction %}&direction={{ request.GET.direction }}{% endif %}
+            {% if request.GET.code %}&code={{ request.GET.code }}{% endif %}
+            {% if request.GET.value_min %}&value_min={{ request.GET.value_min }}{% endif %}
+            {% if request.GET.value_max %}&value_max={{ request.GET.value_max }}{% endif %}
+            {% if request.GET.origin_destination %}&origin_destination={{ request.GET.origin_destination }}{% endif %}"
           >
             Last &raquo;
           </a>
@@ -199,7 +266,7 @@
           "Are you sure you want to delete all selected items?"
         );
         if (confirmDelete) {
-          document.getElementById("delete-form-trade").submit();
+          document.getElementById("delete-form-services").submit();
         }
       }
 </script>
