--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -60,6 +60,10 @@
                 <a class="dropdown-item" href="{% url 'upload_tourism_excel' %}">Upload Tourism data file</a>
               </li>
 
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_services_excel' %}">Upload Services data file</a>
+              </li>
+
             </ul>
           </li>
 
