--- a/databank/general_data/templates/general_data/services_templates/services_table.html
+++ b/databank/general_data/templates/general_data/services_templates/services_table.html
@@ -158,7 +158,7 @@
                             <div class="btn">
                               <a
                                 class=""
-                                id="delete_forest"
+                                id="delete_record"
                                 onclick="confirmDelete('{{record.id}}')"
                                 ><i class="fa-regular fa-trash-can" style="color: #ff0000"></i></a>
                                 
@@ -252,11 +252,8 @@
     function confirmDelete(itemId) {
       var result = confirm("Are you sure you want to delete this record?");
       if (result) {
-          // User clicked "OK"
-          // Redirect to the Django view for deleting the item
-          window.location.href = 'delete_trade_record/' + itemId + '/';
+          window.location.href = 'delete_services_record/' + itemId + '/';
       } else {
-          // User clicked "Cancel" or closed the dialog
           alert("Delete canceled!");
       }
   }
