--- a/databank/general_data/templates/general_data/crime_templates/crime_table.html
+++ b/databank/general_data/templates/general_data/crime_templates/crime_table.html
@@ -81,7 +81,7 @@
 </div>
 {% else %}
 
-<form action="" method="post" id="delete-form">
+<form action="{% url 'delete_selected_crime' %}" method="post" id="delete-form">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light p-3">
         <div class="d-flex align-items-center justify-content-between px-2">
@@ -232,6 +232,26 @@
       </div>
 </form>
 
+
+<script>
+    function confirmDelete(itemId) {
+      var result = confirm("Are you sure you want to delete this record?");
+      if (result) {
+          window.location.href = 'delete_services_record/' + itemId + '/';
+      } else {
+          alert("Delete canceled!");
+      }
+  }
+
+  function confirmDeleteAll() {
+        var confirmDelete = confirm(
+          "Are you sure you want to delete all selected items?"
+        );
+        if (confirmDelete) {
+          document.getElementById("delete-form").submit();
+        }
+      }
+</script>
 
 {% endif %}
 
