--- a/databank/general_data/templates/general_data/crime_templates/crime_table.html
+++ b/databank/general_data/templates/general_data/crime_templates/crime_table.html
@@ -237,7 +237,7 @@
     function confirmDelete(itemId) {
       var result = confirm("Are you sure you want to delete this record?");
       if (result) {
-          window.location.href = 'delete_services_record/' + itemId + '/';
+          window.location.href = 'delete_crime_record/' + itemId + '/';
       } else {
           alert("Delete canceled!");
       }
