--- a/databank/general_data/templates/general_data/crime_templates/crime_table.html
+++ b/databank/general_data/templates/general_data/crime_templates/crime_table.html
@@ -154,7 +154,7 @@
                                 <div class="btn ">
                                   <a
                                     class=""
-                                    href="{% url 'update_services_record' record.id %}"
+                                    href="{% url 'update_crime_record' record.id %}"
                                     ><i class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
                                 </div>
                               </td> 
