--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -63,7 +63,9 @@
               <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_services_excel' %}">Upload Services data file</a>
               </li>
-
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_crime_excel' %}">Upload Crime Data</a>
+              </li>
             </ul>
           </li>
 
