--- a/databank/general_data/templates/general_data/education_templates/education_table.html
+++ b/databank/general_data/templates/general_data/education_templates/education_table.html
@@ -53,7 +53,7 @@
 </div>
 {% else %}
 
-<form action="" method='post' id="delete-form">
+<form action=" {% url 'delete_selected_education' %} " method='post' id="delete-form">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light p-3">
         <div class="d-flex align-items-center justify-content-between px-2">
@@ -190,6 +190,28 @@
         </span>
       </div>
 </form>
+
+
+<script>
+    function confirmDelete(itemId) {
+      var result = confirm("Are you sure you want to delete this record?");
+      if (result) {
+          window.location.href = 'delete_education_record/' + itemId + '/';
+      } else {
+          alert("Delete canceled!");
+      }
+  }
+
+  function confirmDeleteAll() {
+        var confirmDelete = confirm(
+          "Are you sure you want to delete all selected items?"
+        );
+        if (confirmDelete) {
+          document.getElementById("delete-form").submit();
+        }
+      }
+</script>
+
 
 {% endif %}
 
