--- a/databank/general_data/templates/general_data/education_templates/education_table.html
+++ b/databank/general_data/templates/general_data/education_templates/education_table.html
@@ -134,7 +134,7 @@
 
                             </div>
                             <div class="btn ">
-                                <a class="" href="{% url 'update_crime_record' record.id %}"><i
+                                <a class="" href="{% url 'update_education_record' record.id %}"><i
                                         class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
                             </div>
                         </td>
