fix education table content

--- a/databank/general_data/templates/general_data/education_templates/education_table.html
+++ b/databank/general_data/templates/general_data/education_templates/education_table.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <div class="form-group col-md-3">
-                    <label for="education_degree">Country</label>
+                    <label for="education_degree">Education Degree</label>
                     <select id="education_degree" class="form-control" name="education_degree">
                         <option selected>--</option>
                         {% for degree in degree_categories %}
@@ -109,7 +109,7 @@
                         </th>
 
                         <th class="text-white fst-normal " scope="col"
-                            style="font-size:14px; font-weight: 500; background: #12486B;"" scope=" col">
+                            style="font-size:14px; font-weight: 500; background: #12486B;" scope=" col">
                             Action
                         </th>
                     </tr>
