export education excel

--- a/databank/general_data/templates/general_data/education_templates/education_table.html
+++ b/databank/general_data/templates/general_data/education_templates/education_table.html
@@ -9,7 +9,6 @@
 <div class="bg-light mt-3">
     <div class="collapse shadow rounded-2" id="collapseFilter">
         <div class="px-2 py-2">
-            <!-- ADD ACTION HERE -->
             <form action="education_table" method="GET" class="row g-3">
 
                 <div class="form-group col-md-3">
@@ -66,7 +65,7 @@
                     <i class="fa-regular fa-trash-can" style="color: #ff0000"></i>
                     <span>Delete Selected</span>
                 </button>
-                <a href="{% url 'export_excel' %}?{{ request.GET.urlencode }}" class="border p-2 styled-link">
+                <a href="{% url 'export_education_excel' %}?{{ request.GET.urlencode }}" class="border p-2 styled-link">
                     <i class="fa-solid fa-table"></i>
                     <span class="fw-normal">Export to Excel</span>
                 </a>
