Add items to navbar

--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -66,6 +66,12 @@
               <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_crime_excel' %}">Upload Crime Data</a>
               </li>
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_education_excel' %}">Upload Education Data</a>
+              </li>
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_occupation_excel' %}">Upload Occupation Data</a>
+              </li>
             </ul>
           </li>
 
