--- a/databank/general_data/templates/general_data/occupation_templates/occupation_table.html
+++ b/databank/general_data/templates/general_data/occupation_templates/occupation_table.html
@@ -192,6 +192,28 @@
         </span>
       </div>
 </form>
+
+
+<script>
+    function confirmDelete(itemId) {
+      var result = confirm("Are you sure you want to delete this record?");
+      if (result) {
+          window.location.href = 'delete_occupation_record/' + itemId + '/';
+      } else {
+          alert("Delete canceled!");
+      }
+  }
+
+  function confirmDeleteAll() {
+        var confirmDelete = confirm(
+          "Are you sure you want to delete all selected items?"
+        );
+        if (confirmDelete) {
+          document.getElementById("delete-form").submit();
+        }
+      }
+</script>
+
 {% endif %}
 
 {% endblock content %}
