--- a/databank/general_data/templates/general_data/occupation_templates/occupation_table.html
+++ b/databank/general_data/templates/general_data/occupation_templates/occupation_table.html
@@ -59,7 +59,7 @@
     No Records
 </div>
 {% else %}
-<form action="" method="post" id="delete-form">
+<form action="{% url 'delete_selected_occupation' %}" method="post" id="delete-form">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light p-3">
         <div class="d-flex align-items-center justify-content-between px-2">
