--- a/databank/general_data/templates/general_data/occupation_templates/occupation_table.html
+++ b/databank/general_data/templates/general_data/occupation_templates/occupation_table.html
@@ -137,7 +137,7 @@
     
                                 </div>
                                 <div class="btn ">
-                                    <a class="" href="{% url 'update_education_record' record.id %}"><i
+                                    <a class="" href="{% url 'update_occupation_record' record.id %}"><i
                                             class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
                                 </div>
                             </td>
