--- a/databank/general_data/templates/general_data/occupation_templates/occupation_table.html
+++ b/databank/general_data/templates/general_data/occupation_templates/occupation_table.html
@@ -20,7 +20,7 @@
                     </select>
                 </div>
                 <div class="col-md-3">
-                    <label for="year_min">Calender Date Minimum</label>
+                    <label for="year_min">Calender Year Minimum</label>
                     <select id="year_min" class="form-control" name="year_min">
                         <option selected>--</option>
                         {% for year in year_categories %}
@@ -29,7 +29,7 @@
                     </select>
                 </div>
                 <div class="col-md-3">
-                    <label for="year_max">Calender Date Maximum</label>
+                    <label for="year_max">Calender Year Maximum</label>
                     <select id="year_max" class="form-control" name="year_max">
                         <option selected>--</option>
                         {% for year in year_categories %}
@@ -49,13 +49,6 @@
                     </select>
                 </div>
 
-                <div class="form-group col-md-3">
-                    <label for="year">Year</label>
-                    <select id="year" class="form-control" name="year">
-                        <option selected>--</option>
-
-                    </select>
-                </div>
                 <div class="col-md-3 d-flex align-items-end">
                     <button type="submit" class="btn btn-primary">
                         Search
