--- a/databank/general_data/templates/general_data/occupation_templates/occupation_table.html
+++ b/databank/general_data/templates/general_data/occupation_templates/occupation_table.html
@@ -82,7 +82,7 @@
                     <i class="fa-regular fa-trash-can" style="color: #ff0000"></i>
                     <span>Delete Selected</span>
                 </button>
-                <a href="{% url 'export_excel' %}?{{ request.GET.urlencode }}" class="border p-2 styled-link">
+                <a href="{% url 'export_occupation_excel' %}?{{ request.GET.urlencode }}" class="border p-2 styled-link">
                     <i class="fa-solid fa-table"></i>
                     <span class="fw-normal">Export to Excel</span>
                 </a>
