--- a/databank/general_data/templates/general_data/Political_templates/political_table.html
+++ b/databank/general_data/templates/general_data/Political_templates/political_table.html
@@ -146,7 +146,7 @@
       </div>
     </div>
   </div>
-  <div class="fs-4 fw-bold text-center">Mining Data</div>
+  <div class="fs-4 fw-bold text-center">Political Data</div>
 
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
@@ -154,7 +154,7 @@
 </div>
 {% else %}
 <div>
-  <form method="post" action="{% url 'delete_selected_forest' %}" id="delete-form-forest">
+  <form method="post" action="{% url 'delete_selected_political' %}" id="delete-form-political">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light">
       <div class="d-flex align-items-center justify-content-between px-2">
@@ -248,7 +248,7 @@
               <div class="btn">
                 <a
                   class=""
-                  href="{% url 'update_forest_record' record.id %}"
+                  href="{% url 'update_political_record' record.id %}"
 
                   ><i class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
               </div>
@@ -261,7 +261,27 @@
     </div>
     </div>
   </form>
-</div> 
+</div>
+
+<script>
+  function confirmDelete(itemId) {
+    var result = confirm("Are you sure you want to delete this record?");
+    if (result) {
+        window.location.href = 'delete_political_record/' + itemId + '/';
+    } else {
+        alert("Delete canceled!");
+    }
+}
+
+function confirmDeleteAll() {
+      var confirmDelete = confirm(
+        "Are you sure you want to delete all selected items?"
+      );
+      if (confirmDelete) {
+        document.getElementById("delete-form-political").submit();
+      }
+    }
+</script>
 
 {% endif %}
 
