--- a/databank/general_data/templates/general_data/health_disease_templates/health_disease_table.html
+++ b/databank/general_data/templates/general_data/health_disease_templates/health_disease_table.html
@@ -28,15 +28,6 @@
     <div class="collapse shadow rounded-2 " id="collapseFilter">
       <div class="px-2 py-2"> 
         <form class="row" method="GET" action="./health_disease_table">
-          
-          <!-- <div class="form-group col-12">
-                    <div class="input-group">
-                        <input class="form-control py-2 border-right-0 border" type="search"
-                            name="currency_product_originDestination"
-                            placeholder="Search by Currency Type, Product Information or Origin/Destination" />
-        
-                    </div>
-                </div> -->
     
           <div class="col-md-3">
             <label for="date_minimum">Calender Date Minimum</label>
@@ -134,7 +125,7 @@
 </div>
 {% else %}
 <div>
-  <form method="post" action="{% url 'delete_selected_forest' %}" id="delete-form-forest">
+  <form method="post" action="{% url 'delete_selected_health_disease' %}" id="delete-form-health-disease">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light">
       <div class="d-flex align-items-center justify-content-between px-2">
@@ -212,23 +203,42 @@
                   
               </div>
     
-              <div class="btn ">
+              <div class="btn">
                 <a
                   class=""
-                  href="{% url 'update_forest_record' record.id %}"
+                  href="{% url 'update_health_disease_record' record.id %}"
 
                   ><i class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
               </div>
             </td>
           </tr>
-    
           {% endfor %}
         </tbody>
       </table>
     </div>
     </div>
   </form>
-</div> 
+</div>
+
+<script>
+  function confirmDelete(itemId) {
+    var result = confirm("Are you sure you want to delete this record?");
+    if (result) {
+        window.location.href = 'delete_health_disease_record/' + itemId + '/';
+    } else {
+        alert("Delete canceled!");
+    }
+}
+
+function confirmDeleteAll() {
+      var confirmDelete = confirm(
+        "Are you sure you want to delete all selected items?"
+      );
+      if (confirmDelete) {
+        document.getElementById("delete-form-health-disease").submit();
+      }
+    }
+</script>
 
 {% endif %}
 
