--- a/databank/general_data/templates/general_data/housing_templates/housing_table.html
+++ b/databank/general_data/templates/general_data/housing_templates/housing_table.html
@@ -122,7 +122,7 @@
 </div>
 {% else %}
 <div>
-  <form method="post" action="{% url 'delete_selected_forest' %}" id="delete-form-forest">
+  <form method="post" action="{% url 'delete_selected_housing' %}" id="delete-form-housing">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light">
       <div class="d-flex align-items-center justify-content-between px-2">
@@ -208,7 +208,7 @@
               <div class="btn ">
                 <a
                   class=""
-                  href="{% url 'update_forest_record' record.id %}"
+                  href="{% url 'update_housing_record' record.id %}"
 
                   ><i class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
               </div>
@@ -221,7 +221,27 @@
     </div>
     </div>
   </form>
-</div> 
+</div>
+
+<script>
+  function confirmDelete(itemId) {
+    var result = confirm("Are you sure you want to delete this record?");
+    if (result) {
+        window.location.href = 'delete_housing_record/' + itemId + '/';
+    } else {
+        alert("Delete canceled!");
+    }
+}
+
+function confirmDeleteAll() {
+      var confirmDelete = confirm(
+        "Are you sure you want to delete all selected items?"
+      );
+      if (confirmDelete) {
+        document.getElementById("delete-form-housing").submit();
+      }
+    }
+</script>
 
 {% endif %}
 
