display climate table

--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -72,6 +72,9 @@
               <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_occupation_excel' %}">Upload Occupation Data</a>
               </li>
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_climate_excel' %}">Upload Climate Data</a>
+              </li>
             </ul>
           </li>
 
