update climate record

--- a/databank/general_data/templates/general_data/climate_templates/climate_table.html
+++ b/databank/general_data/templates/general_data/climate_templates/climate_table.html
@@ -193,7 +193,7 @@
     
                                 </div>
                                 <div class="btn ">
-                                    <a class="" href="{% url 'update_education_record' record.id %}"><i
+                                    <a class="" href="{% url 'update_climate_record' record.id %}"><i
                                             class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
                                 </div>
                             </td>
