--- a/databank/general_data/templates/general_data/Political_templates/political_table.html
+++ b/databank/general_data/templates/general_data/Political_templates/political_table.html
@@ -27,28 +27,28 @@
 
     <div class="collapse shadow rounded-2 " id="collapseFilter">
       <div class="px-2 py-2"> 
-        <form class="row" method="GET" action="./housing_table">
+        <form class="row" method="GET" action="./political_table">
           
-        <div class="col-md-3">
-            <label for="minimum_population">From Date</label>
+          <div class="col-md-3">
+            <label for="minimum_date">Calender Date Minimum</label>
             <input
               type="number"
               min="0"
               class="form-control"
-              id="from_date"
+              id="date_min"
               placeholder="2080"
-              name="from_date"
+              name="date_min"
             />
           </div>
           <div class="col-md-3">
-            <label for="maximum_number">To Date</label>
+            <label for="maximum_date">Calender Date Minimum</label>
             <input
               type="number"
               min="0"
               class="form-control"
-              id="to_date"
+              id="date_max"
               placeholder="2082"
-              name="to_date"
+              name="date_max"
               />
           </div>
     
@@ -66,24 +66,16 @@
             </select>
           </div>
           <div class="col-md-3">
-            <label for="ViewNameOfPlant">Political Party Name </label>
+            <label for="ViewPoliticalPartyNamet">Political Party Name </label>
             <input
               type="text"
               class="form-control"
-              id="view_mine_Name"
-              placeholder="e.g. Kathmandu"
-              name="name_of_the_mine"
+              id="view_political_party_name"
+              placeholder="e.g. party name"
+              name="political_party_name"
             />
           </div>
-          <div class="col-md-3">
-            <label for="viewLandUnit">Unit</label>
-            <select id="land_unit" name="land_unit" class="form-control">
-              <option selected>--</option>
-              {% for unit in unit_options %}
-              <option value="{{unit}}">{{ unit }}</option>
-              {% endfor %}
-            </select>
-          </div> 
+
 
           <div class="col-md-3">
             <label for="minimum_no_of_members">Minimum No of Members </label>
@@ -91,50 +83,61 @@
               type="number"
               min="0"
               class="form-control"
-              id="minimum_current_production"
+              id="minimum_no_of_members"
               placeholder="1000"
-              name="minimum_current_production"
+              name="minimum_no_of_members"
             />
           </div>
           <div class="col-md-3">
-            <label for="maximum_current_production">Maximum Number of Members</label>
+            <label for="maximum_no_of_members">Maximum Number of Members</label>
             <input
               type="number"
               min="0"
               class="form-control"
-              id="maximum_current_production"
+              id="maximum_no_of_members"
               placeholder="1000"
-              name="maximum_current_production"
+              name="maximum_no_of_members"
               />
           </div>
           <div class="col-md-3">
-            <label for="ViewNameOfPlant">Province </label>
+            <label for="ViewProvince">Province </label>
             <input
               type="text"
               class="form-control"
-              id="view_mine_Name"
+              id="view_province"
               placeholder="e.g. Kathmandu"
-              name="name_of_the_mine"
+              name="view_province"
             />
           </div>
           <div class="col-md-3">
-            <label for="ViewNameOfPlant">District </label>
+            <label for="ViewDistrict">District </label>
             <input
               type="text"
               class="form-control"
-              id="view_mine_Name"
-              placeholder="e.g. Kathmandu"
-              name="name_of_the_mine"
+              id="view_district"
+              placeholder="e.g. district name"
+              name="district"
             />
           </div>
           <div class="col-md-3">
-            <label for="ViewNameOfPlant">Municipality</label>
+            <label for="ViewMunicipality">Municipality</label>
             <input
               type="text"
               class="form-control"
-              id="view_mine_Name"
-              placeholder="e.g. Kathmandu"
-              name="name_of_the_mine"
+              id="view_municipality"
+              placeholder="e.g. municipality name"
+              name="municipality"
+            />
+          </div>
+
+          <div class="col-md-3">
+            <label for="ViewWards">Wards</label>
+            <input
+              type="text"
+              class="form-control"
+              id="view_wards"
+              placeholder="e.g. ward"
+              name="ward"
             />
           </div>
           <div class="col-md-3 d-flex align-items-end">
