--- a/databank/general_data/templates/general_data/road_templates/road_table.html
+++ b/databank/general_data/templates/general_data/road_templates/road_table.html
@@ -1,6 +1,6 @@
 {% extends 'main.html' %} {% block content %}
 <div class="d-flex">
-  <button
+<button
   class="btn btn-sm px-4"
   data-bs-toggle="collapse"
   data-bs-target="#collapseFilter"
@@ -10,7 +10,7 @@
 
   >
     Filters
-  </button>
+</button>
 </div>
 
 <div>
@@ -30,30 +30,26 @@
 
   <div class="collapse shadow rounded-2 " id="collapseFilter">
     <div class="px-2 py-2"> 
-      <form class="row" method="GET" action="./road_table">
+      <form class="row g-3" method="GET" action="./road_table">
   
         <div class="col-md-3">
-            <label for="minimum_population">From Date</label>
-            <input
-              type="number"
-              min="0"
-              class="form-control"
-              id="from_date"
-              placeholder="2080"
-              name="from_date"
-            />
-          </div>
-          <div class="col-md-3">
-            <label for="maximum_number">To Date</label>
-            <input
-              type="number"
-              min="0"
-              class="form-control"
-              id="to_date"
-              placeholder="2082"
-              name="to_date"
-              />
-          </div>
+          <label for="date_minimum">Calender Date Minimum</label>
+          <input
+            type="number"
+            class="form-control"
+            id="date_minimum"
+            name="date_min"
+          />
+        </div>
+        <div class="col-md-3">
+          <label for="date_maximum">Calender Date Maximum</label>
+          <input
+            type="number"
+            class="form-control"
+            id="date_maximum"
+            name="date_max"
+          />
+        </div>
         <div class="form-group col-md-3">
           <label for="country_category">Country</label>
           <select
@@ -68,19 +64,19 @@
           </select>
         </div>
         <div class="form-group col-md-3">
-            <label for="land_code">Road Code</label>
-            <select id="land_code" class="form-control" name="land_code">
+            <label for="road_code">Road Code</label>
+            <select id="road_code" class="form-control" name="road_code">
               <option selected>--</option>
               {% for road_code in road_codes %}
-              <option value="{{road_code.id}}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           d_code.id }}">
+              <option value="{{road_code.id}}">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
                 {{road_code.Code}} - {{road_code.Road_Type}}
               </option>
               {% endfor %}
             </select>
         </div>
         <div class="col-md-3">
-            <label for="viewLandUnit">Unit</label>
-            <select id="land_unit" name="land_unit" class="form-control">
+            <label for="viewRoadUnit">Unit</label>
+            <select id="road_unit" name="road_unit" class="form-control">
               <option selected>--</option>
               {% for length_unit in length_unit_options %}
               <option value="{{length_unit}}">{{ length_unit }}</option>
@@ -108,6 +104,16 @@
             placeholder="1000"
             name="maximum_length"
             />
+        </div>
+        <div class="col-md-3">
+          <label for="ViewWardNumber">Ward no</label>
+          <input
+            type="text"
+            class="form-control"
+            id="view_ward_number"
+            placeholder="e.g. ward no"
+            name="ward_no"
+          />
         </div>
         <div class="col-md-3 d-flex align-items-end">
           <button type="submit" class=" btn btn-primary">
